@@ -247,7 +247,8 @@ void M_ToggleMenu_f (void)
 	}
 }
 
-//#define BIGCHAR_FONT_FILE	"gfx/menu/bigfont.lmp"
+// Note: old version of demo has bigfont.lmp, not bigfont2.lmp
+#define	BIGCHAR_FONT_FILE0	"gfx/menu/bigfont.lmp"
 #define	BIGCHAR_FONT_FILE	"gfx/menu/bigfont2.lmp"
 #define	BIGCHAR_WIDTH_FILE	"gfx/menu/fontsize.lmp"
 
@@ -263,6 +264,7 @@ static void M_BuildBigCharWidth (void)
 	char	After[20], Before[20];
 
 	p = (qpic_t *)FS_LoadTempFile (BIGCHAR_FONT_FILE, NULL);
+	if (!p) p = (qpic_t *)FS_LoadTempFile (BIGCHAR_FONT_FILE0, NULL);
 	if (!p)
 		Sys_Error ("Failed to load %s", BIGCHAR_FONT_FILE);
 	SwapPic(p);
